# OpenCVNotes

./: .gitignore  README.md
src/: CMakeLists.txt  test.cpp
src/assets/: goat.avi
